css/core.css
/* ... */
/* NEW INDICATOR */
._3O2gRFANfKKg3mYONXvlcL {
  background: transparent !important;
  left: unset !important;
  right: calc(50% - 12px) !important;
  bottom: unset !important;
  top: calc(50% - 12px) !important
}

._3O2gRFANfKKg3mYONXvlcL .JRMFrrhowzfdWhJcPIMB1 {
  background-color: rgb(var(--zehn-color-accent)) !important;
  width: 6px !important;
  height: 6px !important;
  border-radius: 50% !important;
}

/* COPIED */
.copiedAnimation, ._3cXgxM5dBuTxGOOYw0lxsP {
  font-size: var(--zehn-size-14) !important;
  letter-spacing: normal !important;
  color: var(--zehn-color-text-primary) !important;
  padding: 0 8px !important;
  border-radius: var(--zehn-size-radius-none) !important;
  background-color: var(--zehn-color-window-panel) !important;
  border: none !important;
  line-height: 32px !important;
  transition: none !important;
  /* animation-name: _3nfC3h6b3ggmMPL1nP37YZ !important;
  animation-duration: 2s !important;
  animation-iteration-count: 1 !important;
  animation-timing-function: ease-out; */
  animation-fill-mode: forwards !important;
  top: 33px !important;
  right: 1px !important;
  left: 1px !important;
  position: fixed !important;
  box-sizing: border-box !important;
  height: 32px !important;
  text-align: center !important;
}

@keyframes _3nfC3h6b3ggmMPL1nP37YZ {
  0% {
		opacity: 1;
    visibility: visible;
	}

	40% {
		opacity: 1
	}

  99% {
    visibility: visible;
    transform: translateY(0);
  }

  100% {
		opacity: 0;
    visibility: hidden;
    transform: translateY(9000px);
	}
}

/* AVATAR INITIALS */
* .ChatRoomGroupAvatar_initials {
  color: var(--zehn-color-text-primary) !important;
  background: transparent !important;
  /* -webkit-background-clip: unset !important; */
  font-weight: var(--zehn-size-weight-normal) !important;
  background-image: none !important;
  -webkit-text-fill-color: var(--zehn-color-text-primary) !important;
  font-size: 1em !important;
  width: 100% !important;
  height: 100% !important;
  padding: 0 !important;
  margin: 0 !important;
  border: none !important;
}

/* INJECTED BUTTON */
.ZehnButton {
  background-color: var(--zehn-color-button-fancy-background);
  border: unset;
  border-radius: var(--zehn-size-radius-none);
  appearance: unset;
  padding: 0;
  color: var(--zehn-color-text-primary);
  cursor: pointer;
  box-sizing: border-box;
}

.ZehnButton:hover {
  background-color: var(--zehn-color-button-fancy-background-hover);
  border: unset;
}

.ZehnButton:active {
  background-color: var(--zehn-color-button-fancy-background-active);
  border: unset;
}

.ZehnButton:focus {
  border: unset;
  outline: unset;
}

.ZehnButton[value="open"] {
  transform: rotate(0deg);
}

.ZehnButton[value="close"] {
  transform: rotate(0deg);
}

#toggleNavigation {
  width: var(--zehn-nav-button-width);
  min-width: var(--zehn-nav-button-width);
  height: var(--zehn-nav-height);
  line-height: var(--zehn-nav-height);
  -webkit-app-region: no-drag;
  align-self: baseline;
}

#toggleNavigationIcon {
  width: var(--zehn-nav-button-width);
  height: var(--zehn-nav-height);
  background-color: var(--zehn-color-icon-primary);
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: var(--zehn-size-icon-medium);
  -webkit-mask-image: var(--zehn-icon-navigation);
  margin: auto;
}

#toggleSidebarSearch {
  width: auto;
  min-width: var(--zehn-size-button-large);
  height: var(--zehn-size-button-large);
  line-height: var(--zehn-size-button-large);
  flex: 1;
  justify-content: center;
  display: flex;
  border: none;
  background-color: var(--zehn-color-button-fancy-background);
  position: relative;
}

#toggleSidebarSearch:hover {
  background-color: var(--zehn-color-button-fancy-background-hover);
}

#toggleSidebarSearch:active {
  background-color: var(--zehn-color-button-fancy-background-active);
}

#toggleSidebarSearch::after {
  content: "";
  bottom: 4px;
  left: 4px;
  right: 4px;
  height: 2px;
  background-color: rgb(var(--zehn-color-accent));
  display: none;
  position: absolute;
}

.ZehnToggled#toggleSidebarSearch::after {
  display: block;
}

#toggleSidebarSearchIcon {
  width: var(--zehn-size-icon-medium);
  height: var(--zehn-size-icon-medium);
  background-color: var(--zehn-color-icon-primary);
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: var(--zehn-size-icon-medium);
  -webkit-mask-image: var(--zehn-icon-search);
  margin: auto;
}

#toggleTheaterMode {
  width: var(--zehn-nav-button-width);
  height: var(--zehn-nav-height);
  line-height: var(--zehn-nav-height);
  order: 99;
  background: var(--zehn-color-button-fancy-background);
  -webkit-app-region: no-drag;
}

#toggleTheaterMode:hover {
  background: var(--zehn-color-button-fancy-background-hover);
}

#toggleTheaterMode:active {
  background: var(--zehn-color-button-fancy-background-active);
}

#toggleTheaterModeIcon {
  width: 100%;
  height: 100%;
  background-color: var(--zehn-color-icon-primary);
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: var(--zehn-size-icon-medium);
  -webkit-mask-image: var(--zehn-icon-theater-mode-disabled);
}

.ZehnToggled#toggleTheaterMode #toggleTheaterModeIcon {
  -webkit-mask-image: var(--zehn-icon-theater-mode-enabled);
}

body:not(.WindowFocus) #toggleTheaterModeIcon {
  filter: var(--zehn-filter-focus) !important;
}

#toggleUser {
  width: var(--zehn-nav-button-width);
  height: var(--zehn-nav-height);
  line-height: var(--zehn-nav-height);
  position: relative;
  left: 0;
  top: 0;
  -webkit-app-region: no-drag;
  pointer-events: all;
}

#toggleUserIcon {
  width: 100%;
  height: 100%;
  background-color: var(--zehn-color-icon-primary);
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: var(--zehn-size-icon-medium);
  -webkit-mask-image: var(--zehn-icon-navigation);
}

body:not(.WindowFocus) #toggleUserIcon {
  filter: var(--zehn-filter-focus);
}
/* ... */

